fix: adjust vertical positioning of background elements for better alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -687,7 +687,7 @@ textarea {
 
 .bg-scribble.eight {
   --x: 40rem;
-  --y: calc(100vh - 50.8rem);
+  --y: calc(100vh - 50.1rem);
   --rot: 4deg;
   --z: 3;
   --fs: 0.8rem;
@@ -779,7 +779,7 @@ textarea {
 
 .deco-save-1 {
   --x: 20rem;
-  --y: calc(100vh - 49.5rem);
+  --y: calc(100vh - 49rem);
   --rot: -4deg;
   --z: 2;
   --fs: 1.15rem;
@@ -788,7 +788,7 @@ textarea {
 
 .deco-dot-1 {
   --x: calc(100vw - 50rem);
-  --y: calc(100vh - 50rem);
+  --y: calc(100vh - 50.6rem);
   --rot: 5deg;
   --z: 2;
   --fs: 1.4rem;
